--- a/requirements.txt
+++ b/requirements.txt
@@ -14,16 +14,21 @@ eventlet==0.40.4
 exceptiongroup==1.3.1
 greenlet==3.2.4
 kombu==5.6.1
+line_profiler==5.0.0
 mysqlclient==2.2.7
 packaging==25.0
 prompt_toolkit==3.0.52
+pycparser==2.23
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+rabbitmq==0.2.0
 redis==5.0.1
+requests==2.32.5
 six==1.17.0
 sqlparse==0.5.4
 tzdata==2025.2
 tzlocal==5.3.1
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.14
 websocket-client==1.9.0
